// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table Nodes > renders Table React Email properly 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<!--$-->
<table
  align="center"
  width="600"
  border="0"
  cellpadding="0"
  cellspacing="0"
  role="presentation"
  style="margin-top:0;margin-right:auto;margin-bottom:0;margin-left:auto;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0">
  <tbody>
    Table content
  </tbody>
</table>
<!--/$-->
"
`;

exports[`Table Nodes > renders TableCell React Email properly 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<!--$-->
<td align="left" data-id="__react-email-column" style="margin:0;padding:0">
  Cell content
</td>
<!--/$-->
"
`;

exports[`Table Nodes > renders TableRow React Email properly 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<!--$-->
<tr style="margin:0;padding:0">
  Row content
</tr>
<!--/$-->
"
`;

exports[`Table Nodes > renders nested table structure without invalid tr-inside-td nesting 1`] = `
"<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<!--$-->
<table
  align="center"
  width="600"
  border="0"
  cellpadding="0"
  cellspacing="0"
  role="presentation"
  style="margin-top:0;margin-right:auto;margin-bottom:0;margin-left:auto;padding-top:0;padding-right:0;padding-bottom:0;padding-left:0">
  <tbody>
    <tr style="margin:0;padding:0">
      <td
        align="left"
        data-id="__react-email-column"
        style="margin:0;padding:0">
        Cell 1
      </td>
      <td
        align="left"
        data-id="__react-email-column"
        style="margin:0;padding:0">
        Cell 2
      </td>
    </tr>
  </tbody>
</table>
<!--/$-->
"
`;
